<resources>
    <string name="app_name">My Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="title">Title</string>
    <string name="date_created">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="discription">Description</string>
    <string name="create_a_note">Create a Note</string>
    <string name="action_home">Home</string>
    <string name="action_create_note">Create Note</string>
    <string name="title_activity_view_note">View Note</string>
    <string name="label_created">Start Date:</string>
    <string name="label_ending">End Date:</string>
    <string name="label_description">Description:</string>
    <string name="hint_enter_title">Enter a title</string>
    <string name="hint_create_date">Tap to insert a date</string>
    <string name="hint_set_date">(Optional) Double tap to set</string>
    <string name="hint_note">Type note here</string>
    <string name="action_edit_note">Edit</string>
    <string name="action_delete_note">Delete</string>
    <string name="label_initial">A</string>
    <string name="labelTitle">Title goes here</string>
    <string name="endDateHere">End date goes here</string>
    <string name="createDateHere">Start date goes here</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="action_discard_changes">Discard</string>
    <string name="action_save_changes">Save</string>
    <string name="title_activity_trash_note">Trash</string>
    <string name="trash_can">Trash Can</string>
    <string name="title_activity_view_trash">View Trash</string>
    <string name="action_sort">Sort</string>
    <string name="note_goes_here">Note goes here</string>
    <string name="action_perma_delete_t">Permanently Delete</string>
    <string name="action_restore_t">Restore</string>
    <string-array name="sort_label">
        <item>Sort By:</item>
        <item>Default</item>
        <item>Recent Created</item>
        <item>Recent Deleted</item>
        <item>Alphabetically</item>
    </string-array>
</resources>
